--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div class="footer-social text-center">
+        <div class="text-center">
           <span>
             <a href="http://www.facebook.com/KankakeeCommunityCollege/" class="footer-social-links" target="_blank" rel="noopener">
               <img src="{{page.baseurl}}assets/img/facebook-f_white.svg" class="footer-icons" alt="Facebook icon, link to the KCC Facebook page">
