Adjust news rollup styling

--- a/assets/scss/5-pages/index/_home.scss
+++ b/assets/scss/5-pages/index/_home.scss
@@ -54,3 +54,19 @@
 .yt-button {
   margin-left: 15px;
 }
+
+.news-thumb {
+  clear: both;
+  float: left;
+  margin-top: -20px;
+  vertical-align: baseline;
+  width: 80px;
+}
+
+.no-bullet {
+  list-style-type: none;
+}
+
+.inline-thumb {
+  display: inline-block;
+}
