Put NJCAA & Region 4 logos on either side of footer...
Use BS4 and BS4 flexbox utilities to adjust for mobile
views. Used .order-1 .order-2 .order-3 BS4 Flexbox utilities
to adjust mobile stacking of logos

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,45 +1,57 @@
 <section class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 text-center">
-        <a href="http://athletics.kcc.edu" class="footer-link"><h5 class="footer-heading">athletics.kcc.edu</h5></a>
+      <div class="col-lg-3 col-sm-6 order-sm-1 order-lg-1 text-center">
+        <img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" alt="NJCAA logo" class="img-fluid mx-auto">
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="text-center">
-          <span>
-            <a href="http://www.facebook.com/KankakeeCommunityCollege/" class="footer-social-links" target="_blank" rel="noopener">
-              <img src="{{page.baseurl}}assets/img/facebook-f_white.svg" class="footer-icons" alt="Facebook icon, link to the KCC Facebook page">
-            </a>
-          </span>
-          <span>
-            <a href="http://twitter.com/KCCedu" class="footer-social-links" target="_blank" rel="noopener">
-              <img src="{{page.baseurl}}assets/img/twitter-white.svg" class="footer-icons" alt="Twitter icon, link to KCC Twitter page">
-            </a>
-          </span>
-          <span>
-            <a href="http://www.instagram.com/kccedu/" class="footer-social-links" target="_blank" rel="noopener">
-              <img src="{{page.baseurl}}assets/img/instagram-white.svg" class="footer-icons" alt="Instagram icon, link to KCC Instagram page">
-            </a>
-          </span>
-          <span>
-            <a href="http://www.youtube.com/user/KankakeeCommCollege" class="footer-social-links" target="_blank" rel="noopener">
-              <img src="{{page.baseurl}}assets/img/youtube-white.svg" class="footer-icons" alt="YouTube icon, link to KCC YouTube page">
-            </a>
-          </span>
-          <span>
-            <a href="http://www.pinterest.com/kccedu/" class="footer-social-links" target="_blank" rel="noopener">
-              <img src="{{page.baseurl}}assets/img/pinterest-p_white.svg" class="footer-icons" alt="Pinterest icon, link to KCC Pinterest page">
-            </a>
-          </span>
-          <span>
-            <a href="http://www.linkedin.com/company/kankakee-community-college" class="footer-social-links" target="_blank" rel="noopener">
-              <img src="{{page.baseurl}}assets/img/linkedin-white.svg" class="footer-icons" alt="LinkedIn icon, link to KCC LinkedIn page">
-            </a>
-          </span>
+      <div class="col-lg-3 col-sm-6 order-sm-2 order-lg-3 text-center">
+        <img src="{{page.baseurl}}assets/img/njcaa-region4-logo.png" alt="NJCAA Region 4 logo" class="img-fluid mx-auto">
+      </div>
+      <div class="col-lg-6 order-sm-3 order-lg-2">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <a href="http://athletics.kcc.edu" class="footer-link"><h5 class="footer-heading">athletics.kcc.edu</h5></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="text-center">
+              <span>
+                <a href="http://www.facebook.com/KankakeeCommunityCollege/" class="footer-social-links" target="_blank" rel="noopener">
+                  <img src="{{page.baseurl}}assets/img/facebook-f_white.svg" class="footer-icons" alt="Facebook icon, link to the KCC Facebook page">
+                </a>
+              </span>
+              <span>
+                <a href="http://twitter.com/KCCedu" class="footer-social-links" target="_blank" rel="noopener">
+                  <img src="{{page.baseurl}}assets/img/twitter-white.svg" class="footer-icons" alt="Twitter icon, link to KCC Twitter page">
+                </a>
+              </span>
+              <span>
+                <a href="http://www.instagram.com/kccedu/" class="footer-social-links" target="_blank" rel="noopener">
+                  <img src="{{page.baseurl}}assets/img/instagram-white.svg" class="footer-icons" alt="Instagram icon, link to KCC Instagram page">
+                </a>
+              </span>
+              <span>
+                <a href="http://www.youtube.com/user/KankakeeCommCollege" class="footer-social-links" target="_blank" rel="noopener">
+                  <img src="{{page.baseurl}}assets/img/youtube-white.svg" class="footer-icons" alt="YouTube icon, link to KCC YouTube page">
+                </a>
+              </span>
+              <span>
+                <a href="http://www.pinterest.com/kccedu/" class="footer-social-links" target="_blank" rel="noopener">
+                  <img src="{{page.baseurl}}assets/img/pinterest-p_white.svg" class="footer-icons" alt="Pinterest icon, link to KCC Pinterest page">
+                </a>
+              </span>
+              <span>
+                <a href="http://www.linkedin.com/company/kankakee-community-college" class="footer-social-links" target="_blank" rel="noopener">
+                  <img src="{{page.baseurl}}assets/img/linkedin-white.svg" class="footer-icons" alt="LinkedIn icon, link to KCC LinkedIn page">
+                </a>
+              </span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+
+
   </div>
 </section>
