Schedule page js and table updated to requested formatting of all dates

--- a/_includes/schedule-table.html
+++ b/_includes/schedule-table.html
@@ -10,6 +10,8 @@
             <th scope="col">Opponent</th>
             <th scope="col" class="text-right" style="paddding-right:10px;">Time</th>
             <th scope="col">Where</th>
+            <th scope="col">Status</th>
+            <th scope="col">Game Summary</th>
             </thead>
             <tbody id="track-table">
             </tbody>
