Add {% sub-nav %} include to layout for schedules

--- a/_layouts/schedule-page.html
+++ b/_layouts/schedule-page.html
@@ -2,6 +2,7 @@
   <body data-sn="{{ page.sport }}" id="page-top" class="page">
   {% include global-nav.html %}
   {% include mega-nav.html %}
+  {% include sub-nav.html %}
   {{ content }}
   {% include footer.html %}
   {% include vendor-scripts.html %}
