Fix links to all news pages

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -28,7 +28,7 @@
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball/roster">Roster</a>
                         </div>
                         <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball#news">News</a>
+                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball/news">News</a>
                         </div>
                       </div>
                     </li>
@@ -44,7 +44,7 @@
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball/roster">Roster</a>
                         </div>
                         <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball#news">News</a>
+                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball/news">News</a>
                         </div>
                       </div>
                     </li>
