--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -122,3 +122,8 @@ p {
   font-size: 1.2em;
   font-weight: 900;
 }
+
+p.general-p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+}
