--- a/assets/scss/5-pages/index/_videos.scss
+++ b/assets/scss/5-pages/index/_videos.scss
@@ -73,9 +73,7 @@ button#load-more{
 	 width: 100%;
 	 height: 40vh;
  }
- #yt_list {
-	 height: 59vh;
-	 width: 800px;
+ #yt_list {   // DO NOT DEFINE A WIDTH HERE OR BAD THINGS WILL HAPPEN
 	 top: auto;
 	 bottom: 0;
 	 left: 0;
@@ -90,6 +88,7 @@ button#load-more{
  .item {
  }
 }
+
 @media screen and (orientation: portrait) and (max-width: 468px) {
  .item {
 	 height: auto;
