--- a/assets/scss/5-pages/index/_videos.scss
+++ b/assets/scss/5-pages/index/_videos.scss
@@ -89,6 +89,14 @@ button#load-more{
  }
 }
 
+.slick-next {
+  right: -10px;
+}
+
+.slick-prev {
+  left: -10px;
+}
+
 @media screen and (orientation: portrait) and (max-width: 468px) {
  .item {
 	 height: auto;
