Add preload of YouTube script and Slick font...
for performance increase

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,10 @@
         <!-- YouTube API -->
         <meta name="yt-api-k" value="AIzaSyDqf_tGL2X636tuTEUjTLcxAdApjc6eiC0" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!--  Preload slick font  -->
+        <link rel="preload" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/fonts/slick.woff" as="font">
+        <!--  https://youtube.com/embed/lirlq5CSEUA?controls=0&showinfo=0&rel=0  -->
+        <link rel="preload" href="https://youtube.com/embed/lirlq5CSEUA?controls=0&showinfo=0&rel=0" as="script">
         <!-- Bootstrap 4 Beta stylesheet CDN link -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!--  Slick.js v1.8.1 stylesheet followed by slick-theme stylesheet  -->
