--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -1,8 +1,5 @@
 <nav id="navBar" class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="clickable">
-    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
     <a href="{{page.baseurl}}"><img src="{{page.baseurl}}assets/img/cavaliers-logo.png" class="center-logo" alt=""></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto">
@@ -134,7 +131,7 @@
             <div class="row">
               <div class="col-md-4 d-none d-md-block">
                 <a href="">
-                  <img src="{{page.baseurl}}assets/img/fitness-center-thumb.jpg" alt="Photo of the various equipment in the fitness center" class="img-fluid nav-img">
+                  <img src="{{page.baseurl}}assets/img/placeholder.png" data-src="{{page.baseurl}}assets/img/fitness-center-thumb.jpg" alt="Photo of the various equipment in the fitness center" class="img-fluid nav-img">
                 </a>
               </div>
               <!-- /.col-md-4  -->
@@ -199,7 +196,7 @@
           <div class="row">
             <div class="col-md-4 d-none d-md-block">
               <a href="">
-                <img src="{{page.baseurl}}assets/img/support-thumb.jpg" alt="Photo of a Cavaliers jersey" class="img-fluid nav-img">
+                <img src="{{page.baseurl}}assets/img/placeholder.png" data-src="{{page.baseurl}}assets/img/support-thumb.jpg" alt="Photo of a Cavaliers jersey" class="img-fluid nav-img">
               </a>
             </div>
             <!-- /.col-md-4  -->
@@ -237,7 +234,7 @@
           <div class="row">
             <div class="col-md-4 d-none d-md-block">
               <a href="">
-                <img src="{{page.baseurl}}assets/img/njcaa-region4-logo.png" alt="" class="img-fluid nav-img">
+                <img src="{{page.baseurl}}assets/img/placeholder.png" data-src="{{page.baseurl}}assets/img/njcaa-region4-logo.png" alt="" class="img-fluid nav-img">
               </a>
             </div>
             <!-- /.col-md-4  -->
@@ -283,4 +280,7 @@
       </ul>
     </div>
   </div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 </nav>
