--- a/assets/scss/3-modules/_global-nav.scss
+++ b/assets/scss/3-modules/_global-nav.scss
@@ -9,8 +9,7 @@
   padding-top: 15px;
   width: 100%;
   height: 56px;
-  position: fixed;
-  z-index: 1031 !important;
+  z-index: 1031;
 }
 
 @media screen and (min-width: 992px) {
@@ -22,6 +21,13 @@
 
 .kcc-logo {
   width: 340px;
+}
+
+@media screen and (min-width: 992px) and (max-width: 1100px) {
+  .kcc-logo {
+    width: 310px;
+    margin-left: -25px;
+  }
 }
 
 .form-inline {
