Add media query to tighten up top content marg in mobile

--- a/assets/scss/4-layout/_banners.scss
+++ b/assets/scss/4-layout/_banners.scss
@@ -3,5 +3,11 @@
 }
 
 .nav-marg {
-  margin-top: 200px;
+  margin-top: 140px;
+}
+
+@media screen and (min-width: 992px) {
+  .nav-marg {
+    margin-top: 200px;
+  }
 }
