--- a/assets/scss/5-pages/index/_home.scss
+++ b/assets/scss/5-pages/index/_home.scss
@@ -19,7 +19,6 @@
 }
 
 .news-feed {
-  background-color: white;
   margin-bottom: 40px;
 }
 
@@ -37,6 +36,7 @@
 }
 
 .news-scroll {
+  background-color: white;
   height: 488px;
   margin-right: -15px;
   max-height: 488px;
@@ -61,4 +61,8 @@
 
 .inline-thumb {
   display: inline-block;
+}
+
+.social-marg {
+  margin-bottom: 40px;
 }
