Remove "Facilities" menu sub-items

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -139,38 +139,15 @@
                 <ul class="nav flex-column">
                 <li class="nav-list">
                   <div class="row nav-row facilities-drop-pad">
-                    <div class="col-md-3">
+                    <div class="col-md-12">
                       <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/fitness-center"><strong>Fitness Center</strong></a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/fitness-center#membership">Membership</a>
-                    </div>
-                    <div class="col-md-3 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/fitness-center#trainers">Personal Trainers</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/fitness-center#testimonials">Testimonials</a>
-                    </div>
-                    <div class="col-md-1 d-none d-md-block">
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
                   <div class="row nav-row">
-                    <div class="col-md-3">
+                    <div class="col-md-12">
                       <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities"><strong>Sports Facilities</strong></a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities#gym">Ryan&#160;Activities Center</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities#baseball-field">Baseball&#160;Field</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities#soccer-field">Soccer&#160;Field</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/sports-facilities#softball-field">Softball&#160;Field</a>
                     </div>
                   </div>
                 </li>
@@ -203,7 +180,7 @@
             <div class="col-md-8">
               <ul class="nav flex-column">
               <li class="nav-list">
-                <div class="row nav-row support-drop-pad">
+                <div class="row nav-row facilities-drop-pad">
                   <div class="col-md-12">
                     <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/cash-bash"><strong>Cash Bash</strong></a>
                   </div>
@@ -274,7 +251,7 @@
           </div>
         </div>
       </div>
-      <!--  End of Support Athletics menu dropdown  -->
+      <!--  End of About menu dropdown  -->
       </li>
       <!--  End Navigation Menu links  -->
       </ul>
