Wrap NJCAA logos in <a> links to NJCAA sites

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-3 col-sm-6 order-sm-1 order-lg-1 text-center">
-        <img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" alt="NJCAA logo" class="img-fluid mx-auto">
+        <a href="http://www.njcaa.org/landing/index" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-shieldlogo_150.png" alt="NJCAA logo" class="img-fluid mx-auto"></a>
       </div>
       <div class="col-lg-3 col-sm-6 order-sm-2 order-lg-3 text-center">
-        <img src="{{page.baseurl}}assets/img/njcaa-region4-logo.png" alt="NJCAA Region 4 logo" class="img-fluid mx-auto">
+        <a href="http://region4sports.com/landing/index" target="_blank" rel="noopener"><img src="{{page.baseurl}}assets/img/njcaa-region4-logo.png" alt="NJCAA Region 4 logo" class="img-fluid mx-auto"></a>
       </div>
       <div class="col-lg-6 order-sm-3 order-lg-2">
         <div class="row">
