--- a/_includes/sub-nav.html
+++ b/_includes/sub-nav.html
@@ -3,7 +3,7 @@
   <div class="row filler">&#160;</div>
   <div class="row sub-nav-row mx-auto">
     <div class="col-md-6 text-center">
-      <h1 class="page-heading">{{ page.base }}</h1>
+      <h1 class="page-heading">{{ page.title }}</h1>
     </div>
     <div class="col-md-6">
       <ul class="nav justify-content-center">
