Add <script> link to lazyload.js in layouts that...
dont use the youtube slider.  Needed b/c youtube slider script initiates
lazyload on landing pages.  Pages without youtube slider were not lazyloading

--- a/_layouts/sub-nav.html
+++ b/_layouts/sub-nav.html
@@ -7,4 +7,5 @@
   {% include footer.html %}
   {% include vendor-scripts.html %}
   {% include custom-script.html %}
+  <script src="{{page.baseurl}}assets/js/lazyLoadOnly.js"></script>
 {% include foot.html %}
