--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,4 +6,5 @@
   {% include footer.html %}
   {% include vendor-scripts.html %}
   {% include custom-script.html %}
+  <script src="{{page.baseurl}}assets/js/lazyLoadOnly.js"></script>
 {% include foot.html %}
