--- a/_layouts/schedule-page.html
+++ b/_layouts/schedule-page.html
@@ -7,4 +7,5 @@
   {% include footer.html %}
   {% include vendor-scripts.html %}
   {% include schedule-page-script.html %}
+  <script src="{{page.baseurl}}assets/js/lazyLoadOnly.js"></script>
 {% include foot.html %}
