--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -5,6 +5,7 @@
 .navbar {
   background-color: $primary-blue;
   margin-top: 56px; // make room for the global-nav in mobile view
+  z-index: 1032
 }
 
 @media screen and (min-width: 992px) {
@@ -18,6 +19,7 @@
     min-height: 251px;
     height: 251px;
     pointer-events: none;
+    z-index: 1030;
   }
 }
 
@@ -98,10 +100,6 @@
 .dropdown:hover, .dropdown:hover a.nav-link {
   color: $primary-blue !important;
   background-color: #f5f6f8;
-}
-
-a.nav-link:hover {
-  color: $primary-red;
 }
 
 @media screen and (min-width: 992px) {
@@ -191,11 +189,42 @@ a.nav-link:hover {
 }
 
 .center-logo {
-  left: 50%; // center the absolutely positioned item
-  margin-left: -105px; // offset the width of the item to make true center
-  margin-top: -115px; // position it vertically
+  left: 98%;
+  margin-left: -105px;
+  margin-top: -95px;
   position: absolute;
-  width: 210px;
+  width: 100px;
+}
+
+@media screen and (min-width: 360px) {
+  .center-logo {
+    margin-left: -110px;
+  }
+}
+
+@media screen and (min-width: 488px) {
+  .center-logo {
+    margin-left: -130px;
+    width: 110px;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .center-logo {
+    left: 98%;
+    margin-left: -150px;
+    margin-top: -100px;
+    width: 130px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .center-logo {
+    left: 50%; // center the absolutely positioned item
+    margin-left: -105px;  // offset the width of the item to make true center
+    margin-top: -115px; // position it vertically
+    width: 210px;
+  }
 }
 
 // Don't display the dropdown carrots for menu items
@@ -209,4 +238,8 @@ a.nav-link:hover {
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.recruit-pad {
+  padding-top: 20px;
 }
