Make subnav position fixed only in non-mobile...
set global rule for .sub-nav to position-relative for mobile and
992px and up width to position fixed for "sticky" sub-nav

--- a/assets/scss/3-modules/_sub-nav.scss
+++ b/assets/scss/3-modules/_sub-nav.scss
@@ -1,8 +1,14 @@
 .sub-nav {
   background-color: $primary-red;
-  position: fixed;
+  position: relative;
   top: -5px;
   z-index: 1029;
+}
+
+@media screen and (min-width: 992px) {
+  .sub-nav {
+    position: fixed;
+  }
 }
 
 .sub-nav-row {
