Adjust content's margin-top for mobile devices when...
sub-nav is not sticky

--- a/assets/scss/3-modules/_schedule-page.scss
+++ b/assets/scss/3-modules/_schedule-page.scss
@@ -1,5 +1,11 @@
 .schedule-container {
-  margin-top: 190px;
+  margin-top: 10px;
+}
+
+@media screen and (min-width: 992px) {
+  .schedule-container {
+    margin-top: 190px;
+  }
 }
 
 .schedule__date-red,
