Adjust sub-nav-marg for non-sticky mobile sub-nav

--- a/assets/scss/4-layout/_banners.scss
+++ b/assets/scss/4-layout/_banners.scss
@@ -1,5 +1,11 @@
 .sub-nav-marg {
-  margin-top: 200px;
+  margin-top: 10px;
+}
+
+@media screen and (min-width: 992px) {
+  .sub-nav-marg {
+    margin-top: 200px;
+  }
 }
 
 .nav-marg {
